# algo-trading-stat-arb-terminal

./: README.md  main.py  pyproject.toml
backtesting/: engine.py  functions.py  global_loop.py  helpers.py  monthly_loop.py
config/: core_portfolio_reference.json  params.py
data/: build_asset_registry.py  data_processing.py  merging_script.py  portfolio_registry.json
docs/: country_research_pipeline.md
notebook/: core_4_country_portfolio_client.ipynb  germany_pair_filter_strategy_runner.ipynb  research.ipynb  sweden_C_strategy_runner.ipynb
object/: class_file.py
scripts/: benchmark_parallel_scans.py  benchmark_scanner_scalability.py  build_core4_institutional_memo.py  build_monthly_universe.py  run_core4_audit_pack.py  run_core4_borrow_cost_stress.py  run_core4_daily_reporting.py  run_core4_execution_delay_stress.py  run_core4_position_reconstruction.py  run_core4_trade_ledger.py  run_core4_validation_pack.py  run_country_research_pipeline.py  run_cross_sectional_robust_research.py  run_desklike_eligibility_merged_campaign.py  run_france_regime_transfer_campaign.py  run_germany_core_entry_campaign.py  run_germany_phase2_campaign.py  run_germany_phase3_campaign.py  run_germany_shadow_validation.py  run_global_loop_experiments.py  run_global_ranking_backtest.py  run_historical_scanner.py  run_monthly_backtest.py  run_monthly_pairs_selection.py  run_multibook_portfolio_campaign.py  run_pairs_selection.py  run_portfolio_allocation_research.py  run_sweden_baseline_vs_slowdown_fair_comparison.py  run_sweden_edge_decomposition_campaign.py  run_sweden_entry_campaign.py  (+7 more)
(+1670 files in other folders)
