[project]
name = "algo-trading-stat-arb-terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
]
